--- a/lab5/kwadraty.html
+++ b/lab5/kwadraty.html
@@ -1,13 +1,12 @@
 <!--
-    Aplikacja kwadraty
+    Aplikacja złap czerwony kwadrat
 -->
 <DOCTYPE html>
     <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <title></title>
+            <title>Złap kwadrat</title>
             <style>
-
                 #enemy {
                     border: 1px solid red;
                     width: 50px;
@@ -15,13 +14,26 @@
                     top: 100px;
                     left: 100px;
                     position: absolute;
-
+                }
+                #player {
+                    border: 1px solid green;
+                    width: 50px;
+                    height: 50px;
+                    top: 100px;
+                    left: 200px;
+                    position: absolute;
+                }
+                #wynik {
+                    top: 10px;
+                    left: 10px;
+                    position: absolute;
                 }
             </style>
         </head>
         <body>
             <div id="enemy"></div>
             <div id="player"></div>
+            <div id="wynik">0</div>
             <script src="./node_modules/jquery/dist/jquery.min.js"></script>
             <script src="./node_modules/rxjs/bundles/Rx.min.js"></script>
             <script src="./kwadraty.js"></script>
